<resources>

    <!-- Globals -->
    <string name="app_name">LessonBooking</string>
    <string name="title_home">Mie prenotazioni</string>
    <string name="title_Booking">Prenota lezione</string>
    <string name="title_catalog">Catalogo lezioni</string>
    <string name="title_selecting_params">Prenotazione lezioni</string>
    <string name="string_welcome"><font size="1">Benvenuto!</font></string>
    <string name="servlet_url">http://10.0.2.2:8080/tweb/</string>
    <string name="network_tag">DEMAND</string>

    <!-- Login activity strings -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_login_desctiption_image">Icona di una persona</string>
    <string name="header_login">Hai un account?</string>
    <string name="prompt_account">Nome utente</string>
    <string name="prompt_password">Password</string>
    <string name="insert_account">Inserisci il tuo nome utente</string>
    <string name="login_btn">Accedi</string>
    <string name="logout_btn">Esci</string>
    <string name="guest_login_btn">Accedi come ospite</string>
    <string name="invalid_account">Nome utente non valido</string>
    <string name="invalid_password">Password non valida</string>
    <string name="login_failed">"Login fallito"</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome">"Welcome!"</string>
    <string name="title_activity_selectparams">Selectparams</string>
    <string name="docenti">Docenti</string>
    <string name="corsi">Corsi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="teacher_string">Seleziona il docente</string>
    <string name="label_course">seleziona il corso :</string>
    <string name="finall">Seleziona la tua prenotazione</string>
    <string name="select_course_text">Seleziona il corso</string>
    <string name="next_btn">avanti</string>
    <string name="select_teacher_text">Seleziona il docente</string>
    <string name="catalog_fragment_title">Ecco a te tutti gli slot liberi</string>
    <string name="Monday">Lun</string>
    <string name="Tuesday">Mar</string>
    <string name="Wednesday">Mer</string>
    <string name="Thursday">Gio</string>
    <string name="Friday">Ven</string>
    <string name="info_lesson_btn_text">Info</string>
    <string name="suggest_login_home">Per visualizzare le tue lezioni, effettua
        \nl\'accesso qui</string>
    <string name="suggest_login_booking">Per prenotare una lezione, effettua
        \nl\'accesso qui</string>
    <string name="suggest_login_btn">Torna al Login</string>
    <string name="waiting">Attendere…</string>
    <string name="booking_fragment_title">Ecco a te tutti gli slot prenotabili</string>
    <string name="empty_slots_list">Nessuno slot disponibile</string>
    <string name="empty_lessons_list">Nessuna lezione trovata</string>
    <string name="book_btn_text">Prenota</string>

    <!-- Values for LessonActivity -->
    <string name="lesson_info_title">Info lezione</string>
    <string name="t_slot_title_info_lesson">Ora:</string>
    <string name="teacher_title_info_lesson">Docente:</string>
    <string name="day_title_info_lesson">Giorno:</string>
    <string name="course_title_info_lesson">Corso:</string>
    <string name="status_title_info_lesson">Stato:</string>
    <string name="lesson_confirm_btn_text">Fatto</string>
    <string name="lesson_cancel_btn_text">Disdici</string>
    <string name="back_btn">Indietro</string>

    <!-- Default strings in handle responses -->
    <string name="no_user_result">Sessione scaduta</string>
    <string name="invalid_object_result">Tabella non riconosciuta</string>
    <string name="not_allowed_result">Richiesta non consentita</string>
    <string name="params_null_result">Parametri nulli o mancanti</string>
    <string name="query_failed_result">Richiesta fallita</string>
    <string name="invalid_checks_result">Parametri della lezione errati</string>
    <string name="invalid_course_teacher_for_lesson_result">
        Associazione corso/docente inesistente
    </string>
    <string name="slot_busy_result">
        Slot occupato, o lezione non disdetta gia esistente
        per l\'utente o il docente
    </string>

</resources>